force-app/main/default/objects/Integration_Log__c/Integration_Log__c.object-meta.xml
<CustomObject>
    <description
  >Outcome log for background integration runs (currently the Calendarific holiday sync) so failures in scheduled/batch context are visible to admins instead of failing silently.</description>
    <label>Integration Log</label>
    <nameField>
        <displayFormat>LOG-{000000}</displayFormat>
        <label>Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Integration Logs</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>