force-app/main/default/objects/Integration_Log__c/fields/Process__c.field-meta.xml
<CustomField>
    <fullName>Process__c</fullName>
    <label>Process</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>